dfir_rs/tests/compile-fail-stable/surface_demuxenum_wrongenum.stderr
error[E0277]: the trait bound `WrongEnum: DemuxEnumBase` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:28
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |                            ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DemuxEnumBase` is not implemented for `WrongEnum`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:12:5
   |
12 |     enum WrongEnum {
   |     ^^^^^^^^^^^^^^
   = note: use `#[derive(dfir_rs::DemuxEnum)]`
help: the trait `DemuxEnumBase` is implemented for `Shape`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:5:14
   |
 5 |     #[derive(DemuxEnum)]
   |              ^^^^^^^^^
note: required by a bound in `check_impl_demux_enum`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:28
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |                            ^^^^^^^^^ required by this bound in `check_impl_demux_enum`
   = note: this error originates in the derive macro `DemuxEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no variant named `Circle` found for enum `WrongEnum`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:24:18
   |
12 |     enum WrongEnum {
   |     -------------- variant `Circle` not found here
...
24 |         my_demux[Circle] -> for_each(std::mem::drop);
   |                  ^^^^^^ variant not found in `WrongEnum`

error[E0277]: the trait bound `WrongEnum: DemuxEnumSink<_>` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:28
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |                            ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DemuxEnumSink<_>` is not implemented for `WrongEnum`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:12:5
   |
12 |     enum WrongEnum {
   |     ^^^^^^^^^^^^^^
   = note: ensure there is exactly one output for each enum variant.
   = note: ensure that the type for each output is a tuple of the field for the variant: `()`, `(a,)`, or `(a, b, ...)`.
help: the trait `DemuxEnumSink<(Pin<&mut __SinkCircle>, Pin<&mut __SinkRectangle>, Pin<&mut __SinkSquare>)>` is implemented for `Shape`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:5:14
   |
 5 |     #[derive(DemuxEnum)]
   |              ^^^^^^^^^
note: required by a bound in `demux_enum_guard`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:15
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |               ^^^^^^^^^^ required by this bound in `demux_enum_guard`
   = note: this error originates in the derive macro `DemuxEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `WrongEnum: DemuxEnumSink<(Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>)>` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:15
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |               ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DemuxEnumSink<(Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>)>` is not implemented for `WrongEnum`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:12:5
   |
12 |     enum WrongEnum {
   |     ^^^^^^^^^^^^^^
   = note: ensure there is exactly one output for each enum variant.
   = note: ensure that the type for each output is a tuple of the field for the variant: `()`, `(a,)`, or `(a, b, ...)`.
help: the trait `DemuxEnumSink<(Pin<&mut __SinkCircle>, Pin<&mut __SinkRectangle>, Pin<&mut __SinkSquare>)>` is implemented for `Shape`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:5:14
   |
 5 |     #[derive(DemuxEnum)]
   |              ^^^^^^^^^
note: required by a bound in `demux_enum_guard`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:15
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |               ^^^^^^^^^^ required by this bound in `demux_enum_guard`
   = note: this error originates in the derive macro `DemuxEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl dfir_rs::futures::Sink<WrongEnum, Error = Infallible>: dfir_rs::futures::Sink<Shape>` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:15
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |               ^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `dfir_rs::futures::Sink<Shape>` is not implemented for `impl dfir_rs::futures::Sink<WrongEnum, Error = Infallible>`
   = help: the following other types implement trait `dfir_rs::futures::Sink<Item>`:
             `&dfir_rs::futures::futures_channel::mpsc::UnboundedSender<T>` implements `dfir_rs::futures::Sink<T>`
             `&mut S` implements `dfir_rs::futures::Sink<Item>`
             `Box<S>` implements `dfir_rs::futures::Sink<Item>`
             `BufferUnordered<S>` implements `dfir_rs::futures::Sink<Item>`
             `Buffered<S>` implements `dfir_rs::futures::Sink<Item>`
             `DemuxEnum<Outputs>` implements `dfir_rs::futures::Sink<Item>`
             `DemuxMap<Key, Si>` implements `dfir_rs::futures::Sink<(Key, Item)>`
             `DemuxVar<Sinks, Error>` implements `dfir_rs::futures::Sink<(usize, Item)>`
           and $N others
note: required by a bound in `pivot_run_sg_1v1`
  --> tests/compile-fail-stable/surface_demuxenum_wrongenum.rs:22:15
   |
22 |         ]) -> demux_enum::<WrongEnum>();
   |               ^^^^^^^^^^ required by this bound in `pivot_run_sg_1v1`
